language/move-lang/tests/move_check/dependencies/cycle_2.move
address 0x1:

module A {
    public foo() {
        0x1::B::foo()
    }
}

module B {
    public foo() {
        0x1::A::foo()
    }
}
